--- a/index.html
+++ b/index.html
@@ -4,9 +4,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ribeiro Advocacia</title>
+
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="shortcut icon" href="./src/img/logo.png" type="image/x-icon">
+
 </head>
 <body>
+    <header class="cabecalho">
+    <h1 class="titulo">Ribeiro Advocacia</h1>
+    <nav class="navegacao">
+        <ul class="menu">
+            <li class="item">
+                <a href="#">Home</a>
+            </li>
+            <li class="item">
+                <a href="#">Áreas de atuação</a>
+            </li>
+            <li class="item">
+                <a href="#">Contatos</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+    <main class="conteudo-principal">
+        <h1 class="titulo1">HOME</h1>
+        <nav class="navegacao">
+            <a href="#">
+                <img src="./src/img/painel.jpg" class="imagem"> 
+            </a>
+        </section>
+        
+        <div class="areas">
+        <h1 class="titulo">Áreas de atuação</h1>
+        <table>
+            <tr class="subtitulo">Direito Condominal / </tr>
+            <th class="conteudo">Assessoria Jurídica condominial possui o objetivo de auxiliar o síndico na gestão condominial, tanto com ações preventivas quanto com ações reparatórias (após a ocorrência do dano), haja vista que o Síndico responde tanto civil quando criminalmente pelos atos praticados em sua gestão.</th>
+
+            <tr class="subtitulo">Direito Criminal / </tr>
+            <th class="conteudo">A função preventiva do direito penal, que por meio de uma sanção criminal, previne a reiteração de condutas criminosas no meio social e protege a comunidade das transgressões que eventualmente lesionam bens jurídicos essenciais à manutenção da vida em harmonia.</th>
+
+            <tr class="subtitulo">Direito Eleitoral / </tr>
+            <th class="conteudo">O direito eleitoral é um ramo do direito que se mostra como um grande garantidor dos demais direitos. É por meio dele que é possível manter o sistema democrático, quando se faz valer as leis que regulam e garantir o sufrágio previsto na Constituição Federal de 1988.</th>
+
+            <tr class="subtitulo">Direito Empresarial / </tr>
+            <th class="conteudo">O Direito Empresarial é relevante para as organizações, sobretudo, por propiciar uma oportunidade de análise dos negócios antecipadamente, de maneira que as empresas pensem em soluções preventivas e, com isso, evitem problemas legais.</th>
+
+            <tr class="subtitulo">Direito Trabalhista / </tr>
+            <th class="conteudo">Para as empresas os direitos trabalhistas servem como um alicerce, e funciona como uma base para que elas mantenham sua relação com os colaboradores de forma regularizada. Os direitos trabalhistas são também um suporte para evitar processos trabalhistas ou o pagamento de multas.</th>
+
+            <tr class="subtitulo">Direito Tributário / </tr>
+            <th class="conteudo">O Direito Tributário permite que a empresa identifique as possibilidades de reduzir custos de tributação com a recuperação de créditos tributários e com o aproveitamento de incentivos fiscais do governo, que eximem a empresa de pagar certos impostos em determinadas condições.</th>
+        </table>
+    </div>
+    </main>
     
 </body>
 </html>
