--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </nav>
         </header>
         <main class="conteudo-principal">
+            <section class="painel">
             <h1 class="titulo1">HOME</h1>
-            <nav class="navegacao">
                 <a href="#">
-                    <img src="./src/img/painel.jpg" class="imagem">
+                    <img src="./src/img/painel.jpg" class="imagem-painel">
                 </a>
             </section>
 
